# autocommit

./: .gitignore  Cargo.toml  LICENSE  README.md  autocommit.sh
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: main.rs  path_util.rs
crates/cli/src/cmd/: analysis_progress.rs  analyze.rs  clean.rs  commit.rs  commit_policy.rs  config.rs  explain_dispatch.rs  git.rs  init.rs  mod.rs  pr.rs  repo_cache.rs  report_cache.rs  version_bump.rs
crates/cli/src/output/: json.rs  text.rs
crates/cli/tests/: analyze_json.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  progress.rs
crates/core/src/cache/: anchor_embeddings.rs  eviction.rs  keys.rs  mod.rs  store.rs
crates/core/src/diff/: collect.rs  features.rs  importance.rs  mod.rs  parse_unified.rs  signals.rs
crates/core/src/dispatch/: embedding_gate.rs  heuristics.rs  mod.rs  policy.rs
crates/core/src/llm/: grammar.rs  mod.rs  prompts.rs  traits.rs
crates/core/src/pipeline/: analyze.rs  fanout.rs  mod.rs  reduce.rs  validate.rs
crates/core/src/types/: diff.rs  dispatch.rs  errors.rs  mod.rs  report.rs
crates/core/tests/: architecture_lint.rs  fanout_batched.rs
crates/ggml-sys/: Cargo.toml  build.rs
crates/ggml-sys/cmake/: CMakeLists.txt
crates/ggml-sys/src/: lib.rs
crates/llama-runtime/: Cargo.toml
crates/llama-runtime/src/: batch.rs  context.rs  context_handle.rs  embed.rs  error.rs  lib.rs  model.rs  model_handle.rs  progress.rs  sampler.rs  state.rs
crates/llama-runtime/tests/: contract.rs  safety.rs
crates/llama-sys/: Cargo.toml  build.rs
crates/llama-sys/src/: autocommit_common_bridge.cpp  autocommit_common_bridge.h  lib.rs
crates/sparse-kv/: Cargo.toml
crates/sparse-kv/src/: engine.rs  error.rs  lib.rs  sampling.rs
crates/sparse-kv/src/arena/: kv_arena.rs  mod.rs  position_map.rs  slot.rs
crates/sparse-kv/src/context/: agent.rs  batch.rs  continuous.rs  decode.rs  mod.rs  scheduler.rs  shared_prefill.rs
(+35 files in other folders)
