[package]
name = "autocommit-cli"
version = "0.5.0"
edition = "2024"

[features]
default = []
llama-native = ["dep:llama-runtime", "autocommit-core/llama-native"]

[dependencies]
autocommit-core = { path = "../core" }
dialoguer = "0.12.0"
gix = { version = "0.79.0", default-features = false, features = ["status", "tree-editor"] }
indicatif = "0.18.2"
llama-runtime = { path = "../llama-runtime", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
